--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "dependencies": {
     "@glidejs/glide": "^3.4.1",
     "bootstrap": "^4.5.2",
+    "grunt": "^1.3.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-sass": "^3.1.0",
     "javascript.js": "^0.0.0",
     "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
     "popper.js": "^1.16.1"
   }
 }
